# kde_apply_color_scheme

./: CMakeLists.txt  README  colorscheme.cpp  kcolorscheme.cpp  kcolorscheme.h  krdb.cpp
